--- a/package.json
+++ b/package.json
@@ -16,8 +16,15 @@
   "devDependencies": {
     "@types/node": "^17.0.29",
     "@types/react": "^18.0.8",
-    "eslint": "8.14.0",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "eslint": "^8.14.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.1.5",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "typescript": "^4.6.3"
   }
 }
