--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
