--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
+    "axios": "^0.27.2",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
