--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/react-redux": "^7.1.24",
     "axios": "^0.27.2",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.5",
+    "next-redux-wrapper": "^7.0.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.5",
     "styled-reset": "^4.3.4"
   },
