--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "bcryptjs": "^2.4.3",
+    "formidable": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.5",
     "next-redux-wrapper": "^7.0.5",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/formidable": "^2.0.5",
     "@types/googlemaps": "^3.43.3",
     "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.29",
