버튼 컴포넌트 - disabled 옵션 추가

--- a/data/applies.json
+++ b/data/applies.json
@@ -1,135 +1,1 @@
-[
-  {
-    "id": 1,
-    "largeSpeciesType": "자연형",
-    "speciesType": "발록",
-    "applyType": "entire",
-    "country": "세우르",
-    "city": "서울특별시",
-    "district": "강북구",
-    "streetAddress": "중앙동 ３７４８−８",
-    "detailAddress": "",
-    "postcode": "462-170",
-    "latitude": 37.4360507,
-    "longitude": 127.1487215,
-    "photos": ["5.png"],
-    "name": "털찐",
-    "userId": 0,
-    "createdAt": "2022-05-20T16:35:32.829Z",
-    "updatedAt": "2022-05-20T16:35:32.829Z"
-  },
-  {
-    "id": 2,
-    "largeSpeciesType": "인간형",
-    "speciesType": "언데드",
-    "applyType": "private",
-    "country": "부카",
-    "city": "서울특별시",
-    "district": "동작구",
-    "streetAddress": "중앙동 ３７４８−８",
-    "detailAddress": "",
-    "postcode": "462-170",
-    "latitude": 37.4360507,
-    "longitude": 127.1487215,
-    "photos": ["8.png"],
-    "name": "좀좀",
-    "userId": 1,
-    "createdAt": "2022-05-22T15:16:44.426Z",
-    "updatedAt": "2022-05-22T15:16:44.426Z"
-  },
-  {
-    "id": 3,
-    "largeSpeciesType": "무형",
-    "speciesType": "고스트",
-    "applyType": "public",
-    "country": "주서스",
-    "city": "대구광역시",
-    "district": "팔달구",
-    "streetAddress": "중앙동 ３７４８−８",
-    "detailAddress": "",
-    "postcode": "462-170",
-    "latitude": 37.4360507,
-    "longitude": 127.1487215,
-    "photos": ["7.png"],
-    "name": "령",
-    "userId": 1,
-    "createdAt": "2022-05-22T15:17:41.621Z",
-    "updatedAt": "2022-05-22T15:17:41.621Z"
-  },
-  {
-    "id": 4,
-    "largeSpeciesType": "자연형",
-    "speciesType": "오크",
-    "applyType": "entire",
-    "country": "세우르",
-    "city": "부산광역시",
-    "district": "수영구",
-    "streetAddress": "중앙동 ３７４８−８",
-    "detailAddress": "",
-    "postcode": "462-170",
-    "latitude": 37.4360507,
-    "longitude": 127.1487215,
-    "photos": ["2.png"],
-    "name": "눈세",
-    "userId": 1,
-    "createdAt": "2022-05-22T15:18:37.757Z",
-    "updatedAt": "2022-05-22T15:18:37.757Z"
-  },
-  {
-    "id": 5,
-    "largeSpeciesType": "무형",
-    "speciesType": "카오스",
-    "applyType": "private",
-    "country": "주서스",
-    "city": "구미시",
-    "district": "인동동",
-    "streetAddress": "진평동 ３７４８−８",
-    "detailAddress": "",
-    "postcode": "462-170",
-    "latitude": 37.4360507,
-    "longitude": 127.1487215,
-    "photos": ["1.png"],
-    "name": "크툴루",
-    "userId": 1,
-    "createdAt": "2022-05-22T15:22:14.677Z",
-    "updatedAt": "2022-05-22T15:22:14.677Z"
-  },
-  {
-    "id": 6,
-    "largeSpeciesType": "인간형",
-    "speciesType": "정령",
-    "applyType": "entire",
-    "country": "세우르",
-    "city": "창원시",
-    "district": "진해구",
-    "streetAddress": "태평1동 ３７４８−８",
-    "detailAddress": "",
-    "postcode": "462-170",
-    "latitude": 37.4360507,
-    "longitude": 127.1487215,
-    "photos": ["3.png"],
-    "name": "와압",
-    "userId": 1,
-    "createdAt": "2022-05-22T15:22:58.531Z",
-    "updatedAt": "2022-05-22T15:22:58.531Z"
-  },
-  {
-    "id": 7,
-    "largeSpeciesType": "자연형",
-    "speciesType": "슬라임",
-    "applyType": "public",
-    "country": "다에굴",
-    "city": "성남시",
-    "district": "분당구",
-    "streetAddress": "판교동 ３７４８−８",
-    "detailAddress": "",
-    "postcode": "462-170",
-    "latitude": 37.4360507,
-    "longitude": 127.1487215,
-    "photos": ["6.png"],
-    "name": "땡글",
-    "userId": 1,
-    "createdAt": "2022-05-22T15:23:43.477Z",
-    "updatedAt": "2022-05-22T15:23:43.477Z"
-  }
-]
+[{"id":1,"largeSpeciesType":"자연형","speciesType":"발록","applyType":"entire","country":"세우르","city":"서울특별시","district":"강북구","streetAddress":"중앙동 ３７４８−８","detailAddress":"","postcode":"462-170","latitude":37.4360507,"longitude":127.1487215,"photos":["5.png"],"name":"털찐","userId":0,"createdAt":"2022-05-20T16:35:32.829Z","updatedAt":"2022-05-20T16:35:32.829Z"},{"id":2,"largeSpeciesType":"인간형","speciesType":"언데드","applyType":"private","country":"부카","city":"서울특별시","district":"동작구","streetAddress":"중앙동 ３７４８−８","detailAddress":"","postcode":"462-170","latitude":37.4360507,"longitude":127.1487215,"photos":["8.png"],"name":"좀좀","userId":1,"createdAt":"2022-05-22T15:16:44.426Z","updatedAt":"2022-05-22T15:16:44.426Z"},{"id":3,"largeSpeciesType":"무형","speciesType":"고스트","applyType":"public","country":"주서스","city":"대구광역시","district":"팔달구","streetAddress":"중앙동 ３７４８−８","detailAddress":"","postcode":"462-170","latitude":37.4360507,"longitude":127.1487215,"photos":["7.png"],"name":"령","userId":1,"createdAt":"2022-05-22T15:17:41.621Z","updatedAt":"2022-05-22T15:17:41.621Z"},{"id":4,"largeSpeciesType":"자연형","speciesType":"오크","applyType":"entire","country":"세우르","city":"부산광역시","district":"수영구","streetAddress":"중앙동 ３７４８−８","detailAddress":"","postcode":"462-170","latitude":37.4360507,"longitude":127.1487215,"photos":["2.png"],"name":"눈세","userId":1,"createdAt":"2022-05-22T15:18:37.757Z","updatedAt":"2022-05-22T15:18:37.757Z"},{"id":5,"largeSpeciesType":"무형","speciesType":"카오스","applyType":"private","country":"주서스","city":"구미시","district":"인동동","streetAddress":"진평동 ３７４８−８","detailAddress":"","postcode":"462-170","latitude":37.4360507,"longitude":127.1487215,"photos":["1.png"],"name":"크툴루","userId":1,"createdAt":"2022-05-22T15:22:14.677Z","updatedAt":"2022-05-22T15:22:14.677Z"},{"id":6,"largeSpeciesType":"인간형","speciesType":"정령","applyType":"entire","country":"세우르","city":"창원시","district":"진해구","streetAddress":"태평1동 ３７４８−８","detailAddress":"","postcode":"462-170","latitude":37.4360507,"longitude":127.1487215,"photos":["3.png"],"name":"와압","userId":1,"createdAt":"2022-05-22T15:22:58.531Z","updatedAt":"2022-05-22T15:22:58.531Z"},{"id":7,"largeSpeciesType":"자연형","speciesType":"슬라임","applyType":"public","country":"다에굴","city":"성남시","district":"분당구","streetAddress":"판교동 ３７４８−８","detailAddress":"","postcode":"462-170","latitude":37.4360507,"longitude":127.1487215,"photos":["6.png"],"name":"땡글","userId":1,"createdAt":"2022-05-22T15:23:43.477Z","updatedAt":"2022-05-22T15:23:43.477Z"},{"id":8,"largeSpeciesType":"자연형","speciesType":"슬라임","applyType":null,"country":"","city":"","district":"","streetAddress":"","detailAddress":"","postcode":"","latitude":37.56801638531733,"longitude":126.97901661255801,"photos":["1.png"],"name":"ddd","userId":1,"createdAt":"2022-05-22T19:18:17.336Z","updatedAt":"2022-05-22T19:18:17.336Z"}]
